# courses

./: .gitignore  .pdbrc  README.md  environment.yml  pyproject.toml
01-beginner/: 01.tutorial.md  02.tutorial.md  03.tutorial.md  04.tutorial.md  05.tutorial.md  06.tutorial.md  07.tutorial.md  08.tutorial.md  15.tutorial.md
02-intermediate/: 01.tutorial.md
contrib/: README.md
data/: stock_basic.parquet
homework/pulls/A11223445566/: week02-pr25.json  week02-pr50.json  week03-pr40.json
homework/pulls/AAdjrj/: week03-pr51.json  week04-pr26.json  week06-pr6.json
homework/pulls/Alicecindy/: week01-pr64.json  week02-pr76.json  week03-pr10.json
homework/pulls/Aurora123456789123/: week02-pr12.json  week04-pr36.json  week06-pr43.json
homework/weekly/AAdjrj/week06/: environment.yml  flow_controls.py  pyproject.toml
homework/weekly/AAdjrj/week06/scripts/: myjob.py
homework/weekly/AAdjrj/week06/src/mypkg/: mylib.py
homework/weekly/Aurora123456789123/week06/: pyproject.toml
homework/weekly/Aurora123456789123/week06/scripts/src/mypkg/: mylib.py
homework/weekly/C---C/week06/: flow_controls.py  pyproject.toml
homework/weekly/C---C/week06/scripts/: myjob.py
homework/weekly/C---C/week06/src/mypkg/: mylib.py
homework/weekly/Cathy_R/week06/: environment.yml  flow_controls.py  pyproject.toml
homework/weekly/Cathy_R/week06/scripts/: myjob.py
homework/weekly/Cathy_R/week06/src/mypkg/: mylib.py
homework/weekly/GJ2025/week06/: flow_controls.py  pyproject.toml
homework/weekly/GJ2025/week06/scripts/: myjob.py
homework/weekly/GJ2025/week06/src/mypkg/: mylib.py
homework/weekly/KJM04/week06/: environment.yml  flow_control.py  pyproject.toml
homework/weekly/KJM04/week06/scripts/: myjob.py
homework/weekly/KJM04/week06/src/mypkg/: mylib.py
homework/weekly/S-S1/week06/: environment.yml  flow_controls.py  pyproject.toml
homework/weekly/S-S1/week06/scripts/: myjob.py
homework/weekly/S-S1/week06/src/mypkg/: mylib.py
homework/weekly/STars1552/week06/: pyproject.toml
homework/weekly/STars1552/week06/scripts/: myjob.py
homework/weekly/TTATLib/week06/: flow_controls.py  pyproject.toml
homework/weekly/TTATLib/week06/scripts/: myjob.py
homework/weekly/TTATLib/week06/src/mypkg/: __init__.py  guessing_game.py  mylib.py
homework/weekly/Vicky_1057/week06/: flow_control.py  pyproject.toml
homework/weekly/Vicky_1057/week06/scripts/: myjob.py
homework/weekly/Vicky_1057/week06/src/mypkg/: mylib.py
homework/weekly/WS0604/week06/: flow_controls.py  pyproject.toml
homework/weekly/WS0604/week06/src/mypkg/: mylib.py
homework/weekly/Wxy496417/week06/: pyproject.toml
homework/weekly/Wxy496417/week06/scripts/: myjob.py
homework/weekly/Wxy496417/week06/src/mypkg/: mylib.py
homework/weekly/X787889097/week06/: flow_controls.py  pyproject.toml
homework/weekly/X787889097/week06/scripts/: myjob.py
homework/weekly/X787889097/week06/src/mypkg/: mylib.py
homework/weekly/Zzunkn/week06/: flow_controls.py  pyproject.toml
homework/weekly/Zzunkn/week06/scripts/: myjob.py
homework/weekly/Zzunkn/week06/src/mypkg/: mylib.py
homework/weekly/cherishdokyeom/week06/: flow_controls.py  pyproject.toml
homework/weekly/cherishdokyeom/week06/scripts/: myjob.py
homework/weekly/cherishdokyeom/week06/src/mypkg/: mylib.py
homework/weekly/crazzy77/week06/: flow_controls.py  pyproject.toml
homework/weekly/crazzy77/week06/scripts/: myjob.py
homework/weekly/crazzy77/week06/src/mypkg/: mylib.py
homework/weekly/donk-666/week06/: environment.yml  for循环的基础.py  myjob.py  pyproject.toml  xiaoshuo.py
homework/weekly/donk-666/week06/scr1/mypkg1/: mylib.py
homework/weekly/donk-666/week06/二_python判断语句学习/: python的判断语句.py  实战.py  布尔类型.py
homework/weekly/donk-666/week06/第三章_/: 1.基础准备.py
homework/weekly/elisabeth_1108/week06/: environment.yml  flow_controls.py  pyproject.toml
homework/weekly/elisabeth_1108/week06/scr/mypkg/: mylib.py
homework/weekly/elisabeth_1108/week06/scripts/: myjob.py
homework/weekly/hengxudong/week06/: flow_controls.py  pyproject.toml
homework/weekly/hengxudong/week06/scripts/: myjob.py
homework/weekly/hengxudong/week06/src/mypkg/: mylib.py
homework/weekly/jiemoduner/week06/: environment.yml  flow_controls.py  pyproject.toml
homework/weekly/jiemoduner/week06/scripts/: myjob.py
homework/weekly/jiemoduner/week06/src/mypkg/: mylib.py
homework/weekly/kaki5358979/week06/: environment.yml  flow_controls.py  pyproject.toml
homework/weekly/kaki5358979/week06/scripts/: myjob.py
homework/weekly/kaki5358979/week06/src/mypkg/: guessing_game.py  mylib.py
homework/weekly/liujin196/week06/: README.md  environment.yml  flow_controls.py  guessing_game.py  myjob.py  pyproject.toml
homework/weekly/liujin196/week06/src/mypkg/: mylib.py
homework/weekly/memory0526/week06/: flow_controls.py  pyproject.toml
homework/weekly/memory0526/week06/scripts.py/: myjob.py
homework/weekly/memory0526/week06/src/mypkg/: mylib.py
homework/weekly/niuwen123/week06/: flow_controls.py  pyproject.toml
homework/weekly/niuwen123/week06/scripts/: myjob.py
homework/weekly/niuwen123/week06/src/mypkg/: mylib.py
homework/weekly/readlijie/week06/: environment.yml  flow_controls.py  pyproject.toml
homework/weekly/readlijie/week06/scripts/: myjob.py
homework/weekly/readlijie/week06/src/mypkg/: guessing_game.py  mylib.py
homework/weekly/shangfenjiandan/week06/: flow_controls.py  pyproject.toml
homework/weekly/shangfenjiandan/week06/scripts/: myjob.py
homework/weekly/shangfenjiandan/week06/src/mypkg/: mylib.py
homework/weekly/tangmingke/week06/: environment.yml  flow_controls.py  pyproject.toml
homework/weekly/tangmingke/week06/scripts/: myjob.py
homework/weekly/tangmingke/week06/src/mypkg/: mylib.py
homework/weekly/uap/week06/: environment.yml  flow_controls.py  pyproject.toml
homework/weekly/uap/week06/scripts/: myjob.py
homework/weekly/uap/week06/src/mypkg/: mylib.py
homework/weekly/wmmyjyy/week06/: flow_controls.py  myjob.py  pyproject.toml  第6周学习报告.docx
kbase/: README.md
pages/: manage.py  reports.py
src/mylib/: gitcode.py  manage.py
(+1567 files in other folders)
