[project]
name = "cueb-fintech-course"
version = "2025.4.28"
authors = [
  {name = "Qiang Gao", email = "mutecamel@gmail.com"},
]
maintainers = [
  {name = "Qiang Gao", email = "mutecamel@gmail.com"}
]
dependencies = [
  "polars",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/mylib",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["homework"]

[tool.ruff.lint]
ignore = ["F401"]