
[project]
name = "mypackage"
version = "0.0.1"
dependencies = [
  "openpyxl",
 
]
requires-python = ">=3.8"
authors = [
  {name = "AAdjrj", email = "1246041244@qq.com"},
  
]

description = "测试用软件包"


[project.optional-dependencies]
dev = [
    "Pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypkg"]