
[project]
name = "mypackage"
version = "2025.4.14"
dependencies = [
  "oppenpyxl",
  
]
requires-python = ">=3.8"
authors = [
  {name = "Cathy.R", email = "Z031206090320@163.com"},
 
]
description = "测试用的软件包"

[project.optional-dependencies]
def = [
  "pytest",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mypkg",
]