[project]
name = "mypackage"
version = "2025.4.20"
dependencies = [
    "openpyxl",
]
authors = [
  {name = "Jian Guo", email = "15116912830@163.com"},
]
description = "测试用的软件包"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mypkg",
]
