[project]
name = "mypackage"
version = "2025.4.14"
dependencies = [
  "openpyx1",
]
authors = [
  {name = "S-S1", email = "1819202951@qq.com.com"},
]
description = "小小测试一下"

[project.optional-dependencies]
gui = ["PyQt5"]
dev= [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypkg"]
