[project]
name = "mypackage"
version = "2025.4.20"
dependencies = [
    "openpyxl",
]
authors = [
  {name = "xzy", email = "xzy01411552@163.com"},
]
description = "测试用软件包"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mypkg",
]
