[project]
name = "mypackage"
version = "2025.4.14"
dependencies = [
    "oppenpyxl",
]
authors = [
  {name = "Rui Zhu", email = "2816232420@qq.com"},
]
description = "测试用的软件包"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]