[project]
name = "mypackage"
version = "2025.4.15"
dependencies = [
  "openpyxl",
]
authors = [
  {name = "haha", email = "3249196473@qq.com"},
]
description = "测试用的软件包"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
"src/mypkg",
]