[project]
name = "mypackage"
version = "2025.4.17"
dependencies = [
  "openpyxl",
]
authors = [
  {name = "cherry", email = "3155496417@qq.com"},
]
description = "测试用的软件包"

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mypkg",
]