[project]
name = "mypackage"
version = "2025.4.14"
dependencies = [
  "openpyxl",
]
requires-python = ">=3.12"
authors = [
  {name = "ZMX", email = "13976637964@163.com"},
]
description = "Lovely Spam! Wonderful Spam!"

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypkg"]