[project]
name = "mypackage"
version = "2025.4.14"
dependencies = [
  "openpyx1",
]
authors = [
  {name = "DK", email = "DK@163.com"},
]
description = "测试用的软件包"

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mypkg",
]