
[project]
name = "mypackage"
version = "0.0.1"
dependencies = [
    "openpyxl",
]
requires-python = ">=3.8"
authors = [
  {name = "fanzekai", email = "1321287453@qq.com"},
]
description = "测试用的软件包"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src1/mypkg1",
]