[project]
name = "mypackage"
version = "2025.4.15"
dependencies = [
  "openpyxl",
]

authors = [
  {name = "GHH", email = "guohuanhuan1108@163.com"},

]

description = "学习用的"


[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mypkg",
]