[project]
name = "mypackage"
version = "2025.4.15"
dependencies = [
  "oprnpyx1",
]
authors = [
  {name = "yufan", email = "2015375494@qq.com"},
]
description = "测试用的软件包"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true