[project]
name = "mypackage"
version = "2025.4.19"
dependencies = [
    'openpyxl', 
]

requires-python = ">=3.12"
authors = [
  {name = "kaki", email = "kaki@example.com"},
]

description = "for practice"

[project.optional-dependencies]
dev=[
    'pytest',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypkg"]
