[project]
name = "mypackage"
version = "2025.4.14"
dependencies = [
 "openpyxl",
]
authors = [
  {name = "READ lijie", email = "2661805899@qq.com"},
]
description = "test"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mypkg",
]