[project]
name = "mypackage"
version = "2025.4.14"
dependencies = [
  "openpyxl",
]
requires-python = ">=3.8"
authors = [
  {name = "shangfenjiandan", email = "15001090950@163.com"},
]
description = "学习报告配套软件包"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/mypkg",
]