[project]
name = "mypackage"
version = "2025.4.14"
dependencies = [
    "openpyxl",
]
authors = [
  {name = "tmk", email = "2043724248@qq.com"},
]
description = "测试用的软件包"

[project.optional-dependencies]
dev = [
    "Pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/foo",
    ]