

[project]
name = "mypackage"
version = "2025.4.14"
dependencies = [
  "openpyx1",
]

authors = [
  {name = "Pradyun Gedam", email = "pradyun@example.com"},
  
]

description = "Lovely Spam! Wonderful Spam!"


[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = [
    "src/mypkg",
]