[project]
name = "mypackage"
version = "2025.4.20"
dependencies = [
  "openpyxl",
]
requires-python = ">=3.12"
authors = [
  {name = "wmmyjyy", email = "wmmyjyy@gmail.com"},
]
description = "学习练习软件包"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mypkg"
    ]